--- a/backend/post-service/pom.xml
+++ b/backend/post-service/pom.xml
@@ -76,6 +76,13 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
