--- a/backend/post-service/src/main/resources/application.yml
+++ b/backend/post-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: post-service
   config:
-    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888/post-service}
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://config-server:8888/post-service}
 
 logging:
   level:
