--- a/backend/post-service/src/main/resources/bootstrap.yml
+++ b/backend/post-service/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
-spring:
-  cloud:
-    config:
-      name: post-service
-      uri: ${SPRING_CLOUD_CONFIG_URI:http://config-server:8888}
+#spring:
+#  cloud:
+#    config:
+#      name: post-service
+#      uri: ${SPRING_CLOUD_CONFIG_URI:http://config-server:8888}
