--- a/backend/config-server/src/main/resources/config/post-service.yml
+++ b/backend/config-server/src/main/resources/config/post-service.yml
@@ -3,4 +3,6 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
