--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -154,7 +154,7 @@ services:
 
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
-    container_name: azurite
+    container_name: blob-container
     ports:
       - '10000:10000'
       - '10001:10001'
