--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -185,6 +185,48 @@ services:
     volumes:
       - vol-keycloak-db:/var/lib/postgresql/data
 
+  blob-service:
+    <<: *service
+    build: blob-service
+    container_name: blob-service
+    ports:
+      - '8083:8083'
+    networks:
+      - net-apiGw-blobServ
+      - net-blobServ-azurite
+    depends_on:
+      azurite:
+        condition: service_healthy
+      metadata-db:
+        condition: service_healthy
+
+  metadata-db:
+    <<: *db
+    environment:
+      <<: *db-env
+      POSTGRES_DB: metadata_db
+      PGPORT: 5435
+    ports:
+      - '5435:5435'
+    networks:
+      - net-blobServ-azurite
+    volumes:
+      - vol-metadata-db:/var/lib/postgresql/data
+
+  azurite:
+    image: mcr.microsoft.com/azure-storage/azurite
+    container_name: blob-container
+    ports:
+      - '10000:10000'
+      - '10001:10001'
+      - '10002:10002'
+    networks:
+      - net-blobServ-azurite
+    healthcheck:
+      test: nc 127.0.0.1 10000 -z
+      interval: 1s
+      retries: 30
+
 networks:
   net-postDB-postServ:
   net-userDB-userServ:
@@ -193,9 +235,12 @@ networks:
   net-apiGw-postServ:
   net-keycloakDB-keycloakServ:
   net-keycloak-apiGw:
+  net-apiGw-blobServ:
+  net-blobServ-azurite:
   net-eureka-config:
 
 volumes:
   vol-user-db:
   vol-post-db:
   vol-keycloak-db:
+  vol-metadata-db:
