--- a/backend/user-service/pom.xml
+++ b/backend/user-service/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
