--- a/backend/chat-service/src/main/resources/application.yml
+++ b/backend/chat-service/src/main/resources/application.yml
@@ -29,6 +29,12 @@ spring:
       enabled: true
       path: /h2-console
 
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+
 ---
 
 spring:
