--- a/backend/chat-service/pom.xml
+++ b/backend/chat-service/pom.xml
@@ -77,6 +77,10 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
