Setup communication between-user service and chat-service to handle data integrity beetween their databases

--- a/backend/user-service/pom.xml
+++ b/backend/user-service/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webflux</artifactId>
+      </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
