--- a/backend/keycloak-utils/pom.xml
+++ b/backend/keycloak-utils/pom.xml
@@ -32,6 +32,16 @@
             <version>23.0.6</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.4.1</version> <!-- Replace with the latest version -->
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.13.0</version> <!-- Replace with the latest version -->
+        </dependency>
 
         <dependency>
             <groupId>org.keycloak</groupId>
