a little mess - in progress

--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -166,6 +166,7 @@ services:
       - api-gateway
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl/nginx:/etc/nginx/ssl
 
   keycloak-service:
     image: quay.io/keycloak/keycloak:23.0
@@ -183,14 +184,19 @@ services:
       - ./keycloak-service/themes:/opt/keycloak/themes
       - ./keycloak-service/realm-export.json:/opt/keycloak/data/import/realm-export.json
       - ./keycloak-utils/jar/keycloak-utils.jar:/opt/keycloak/providers/keycloak-utils.jar
+      - ./ssl/keycloak/keycloak.jks:/opt/keycloak/conf/keycloak.jks
     ports:
       - '8443:8443'
     networks:
       - net-keycloakDB-keycloakServ
       - net-keycloak-apiGw
     command:
-      - "start-dev"
-      - "--http-port=8443"
+      - "start"
+      - "--hostname=localhost"
+      - "--https-port=8443"
+      - "--https-key-store-file=/opt/keycloak/conf/keycloak.jks"
+      - "--https-key-store-password=keycloak"
+      - "--https-key-store-type=JKS"
       - "--import-realm"
       - "--features=declarative-user-profile"
       - "--spi-theme-cache-themes=true"
