--- a/backend/default.conf
+++ b/backend/default.conf
@@ -1,6 +1,11 @@
 server {
-  listen 4200;
+   
+   listen 4200 ssl;
    server_name localhost;
+
+   ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+   ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+
    location / {
       root /usr/share/nginx/html;
       index index.html index.htm;
