Get message history & get conversation previews done

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,7 +22,8 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "types": ["@types/sockjs-client"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
