--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@stomp/stompjs": "^7.0.0",
     "keycloak-angular": "^14.2.0",
     "keycloak-js": "^23.0.7",
     "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
     "theme-change": "^2.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -32,6 +34,7 @@
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/sockjs-client": "^1.5.4",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.9",
     "jasmine-core": "~4.6.0",
