--- a/backend/default.conf
+++ b/backend/default.conf
@@ -5,11 +5,22 @@ server {
 
    ssl_certificate /etc/nginx/ssl/nginx.crt;
    ssl_certificate_key /etc/nginx/ssl/nginx.key;
-   ssl_trusted_certificate /etc/nginx/ssl/myCA.crt;
+
+   location /api {
+
+        add_header 'Access-Control-Allow-Origin' 'https://localhost:4200';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+
+        proxy_ssl_trusted_certificate /etc/nginx/ssl/spring-gateway.crt;
+        proxy_ssl_verify off;
+        proxy_pass http://api-gateway:8080;
+        proxy_set_header Host $host;
+        proxy_set_header Authorization $http_authorization;
+    }
 
    location / {
-      root /usr/share/nginx/html;
-      index index.html index.htm;
-      try_files $uri $uri/ /index.html =404;
-   }
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
+    }
 }
