Change application properties to use rabbitmq

--- a/backend/blob-service/src/main/resources/application.yml
+++ b/backend/blob-service/src/main/resources/application.yml
@@ -9,6 +9,10 @@ spring:
   servlet:
     multipart:
       max-file-size: 10MB
+  rabbitmq:
+    host: ${RABBITMQ_HOST}
+    username: guest
+    password: guest
 
 azure:
   storage:
