--- a/backend/rabbitmq-consumer/Dockerfile
+++ b/backend/rabbitmq-consumer/Dockerfile
@@ -1,11 +1,12 @@
-FROM python:alpine3.11
+FROM python:3.11
+
+WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip3 install -r ./requirements.txt
+RUN pip install -r requirements.txt
 
-COPY ./src /app/
+COPY src/ .
 
-WORKDIR /app
 
 CMD ["python", "main.py"]
