--- a/backend/default.conf
+++ b/backend/default.conf
@@ -1,14 +1,21 @@
 server {
-   
-   listen 4200 ssl;
-   server_name localhost;
+    listen 4200;
+    server_name localhost;
 
-   ssl_certificate /etc/nginx/ssl/nginx.crt;
-   ssl_certificate_key /etc/nginx/ssl/nginx.key;
+    location / {
+        return 301 https://$host:4443$request_uri;
+    }
+}
 
-   location /api {
+server {
+    listen 4443 ssl;
+    server_name localhost;
 
-        add_header 'Access-Control-Allow-Origin' 'https://localhost:4200';
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+    location /api {
+        add_header 'Access-Control-Allow-Origin' 'https://localhost:4443';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
 
         proxy_ssl_trusted_certificate /etc/nginx/ssl/spring-gateway.crt;
@@ -18,7 +25,7 @@ server {
         proxy_set_header Authorization $http_authorization;
     }
 
-   location / {
+    location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html =404;
