--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -6,6 +6,13 @@ spring:
     name: user-service
   config:
     import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://config-server:8888/user-service}
+  rabbitmq:
+    host: rabbitmq
+    username: guest
+    password: guest
+    template:
+      exchange: delayedExchange
+      routing-key: fileDeletionQueue
 
 logging:
   level:
