--- a/backend/user-service/pom.xml
+++ b/backend/user-service/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>3.1.4</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
