--- a/backend/post-service/pom.xml
+++ b/backend/post-service/pom.xml
@@ -107,6 +107,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>3.1.4</version>
+		</dependency>
+
 
 	</dependencies>
 	<dependencyManagement>
