--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -157,6 +157,7 @@ services:
       - net-keycloak-apiGw
       - net-eureka-config
       - net-apiGw-blobServ
+      - net-apiGw-client
     depends_on:
       - config-server
       - eureka-server
@@ -168,10 +169,14 @@ services:
       context: ../frontend
     ports:
       - '4200:4200'
+      - '4443:4443'
     depends_on:
       - api-gateway
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl/nginx:/etc/nginx/ssl
+    networks:
+      - net-apiGw-client
 
   keycloak-service:
     image: quay.io/keycloak/keycloak:23.0
@@ -185,11 +190,14 @@ services:
       - KC_DB_USERNAME=postgres
       - KC_DB_PASSWORD=postgres
       - KC_DB_URL_PORT=5434
+      - KC_HTTPS_CERTIFICATE_FILE=/opt/keycloak/conf/keycloak.crt
+      - KC_HTTPS_CERTIFICATE_KEY_FILE=/opt/keycloak/conf/keycloak.key
       - KC_API_KEY=${KC_API_KEY}
     volumes:
       - ./keycloak-service/themes:/opt/keycloak/themes
       - ./keycloak-service/realm-export.json:/opt/keycloak/data/import/realm-export.json
       - ./keycloak-utils/jar/keycloak-utils.jar:/opt/keycloak/providers/keycloak-utils.jar
+      - ./ssl/keycloak:/opt/keycloak/conf
     ports:
       - '8443:8443'
     networks:
@@ -197,7 +205,9 @@ services:
       - net-keycloak-apiGw
     command:
       - "start-dev"
-      - "--http-port=8443"
+      - "--hostname=localhost"
+      - "--http-port=8444"
+      - "--https-port=8443"
       - "--import-realm"
       - "--features=declarative-user-profile"
       - "--spi-theme-cache-themes=true"
@@ -308,6 +318,7 @@ networks:
   net-blobServ-azurite:
   net-eureka-config:
   net-apiGw-chatServ:
+  net-apiGw-client:
   net-rabbitmq:
 
 volumes:
